Use clip instead of hidden for hiding overflow to prevent auto scroll

--- a/webapp/styles/groups/tree.scss
+++ b/webapp/styles/groups/tree.scss
@@ -8,7 +8,7 @@
   width: 100%;
   height: 100%;
   min-height: 100px;
-  overflow: hidden;
+  overflow: clip;
 
   &.file-drag-highlight {
     border: 2px dashed #4CAF50;
